# dcache-pyclient

./: .gitignore  README.md  pyproject.toml
.github/workflows/: unittest.yml
docs/: configuration.md  installation.md
src/ada/: __init__.py  api.py  auth.py  cli.py  client.py  config.py  exceptions.py  formatters.py  models.py  utils.py
src/ada/cli/: app.py  commands.py  formatters.py
src/ada/etc/: ada.conf
src/ada/services/: checksum.py  events.py  labels.py  namespace.py  staging.py  system.py  xattr.py
tests/: conftest.py  input.json
tests/integration/: test_cli.py  test_library.py
tests/unit/: test_auth.py  test_conf.py  test_services.py  test_utils.py
